--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
       },
       "scripts": {
             "dev": "vite",
-            "build": "vite build --output public"
+            "build": "vite build"
       }
 }
